fix black on black headline in dark mode

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -162,7 +162,6 @@ body {
 }
 
 h2 {
-  color: black;
   position: relative;
   text-align: center;
   font-size: 17px;
